--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ko" style="scroll-behavior: smooth;">
 <head>
+    <meta name="naver-site-verification" content="0e5e2afc3cad4ebf0d7ad23c2afabd6aca530b61" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="naver-site-verification" content="65af10ce3e055a7a0df4927aa903b68c0ac32011" />
